# opendirector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MANUAL_DE_USO.md  README.md  SPEC.md  docker-compose.yml  docker-entrypoint.sh  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json
.github/workflows/: automator-build.yml
automator/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
automator/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
automator/src-tauri/: Cargo.toml  tauri.conf.json
automator/src-tauri/src/: commands.rs  lib.rs  main.rs
automator/src-tauri/src/db/: mod.rs  ops.rs  schema.sql
automator/src-tauri/src/execution/: engine.rs  mod.rs  timecode.rs
automator/src-tauri/src/media/: downloader.rs
automator/src-tauri/src/vmix/: acts.rs  client.rs  mod.rs  pool.rs  tally.rs  xml_parser.rs
automator/src-tauri/src/ws/: client.rs
automator/src/components/: ControlBar.tsx  (+10 more)
migrations/: 001_shows.sql  002_blocks_elements.sql  003_logs_and_rest.sql  004_gt_templates.sql  005_media_category.sql  006_block_timing.sql
public/: instructions.html  test.html
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActionConfigurator.tsx  AutomatorUpdateNotice.tsx  GtTemplateManager.tsx  InspectorPanel.tsx  MediaBrowser.tsx  MediaUpload.tsx  PeoplePanel.tsx  SignalPanel.tsx
src/lib/: app-path.ts  github-releases.ts  media.ts  state-machine.ts  supabase.ts  timing.ts  types.ts  undo.ts  ws-broadcast.ts
src/stores/: live-store.ts  rundown-store.ts
(+39 files in other folders)
